🩹 Fix: layout collapse on iOS terminal (fkios)

--- a/assets/stylesheets/header/button.scss
+++ b/assets/stylesheets/header/button.scss
@@ -19,19 +19,27 @@ button {
 		transform: translateY(2px);
 	}
 
+	svg, span {
+		display: inline-block;
+	}
+
 	svg {
-		height: 36px;
+		height: 32.4px;
 		width: auto;
 		fill: $text-dark;
 		position: relative;
-		top: -1px;
+		top: 2px;
+		transform: scale(1.1);
 	}
 
 	span {
-		font-size: 14px;
+		font-size: 8px;
+		font-weight: 900;
 		color: $text-dark;
 		position: relative;
-		top: -10px;
-		letter-spacing: -0.86px;
+		top: -7px;
+		letter-spacing: -0.95px;
+		white-space: nowrap;
+		transform: scale(1.56);
 	}
 }
